# ml-orchestrator

./: .gitignore  .pytest_next_step.xml  .pytest_prediction.xml  .pytest_preview_step.xml  .pytest_report.xml  .pytest_revert_step.xml  .pytest_subset.xml  .pytest_tail_verify.xml  .pytest_training_source.xml  .pytest_verify_recent.xml  CHANGELOG.md  LICENSE  PHASES.md  README.md  ml_orchestrator_demo.spec  packaging.md  pyproject.toml  test_full_results.txt  test_results_final.txt
core/: cli.py  data_quality.py  debug_parse_titanic.py  executor.py  handler_registry.py  paths.py  prediction.py  run_logger.py  run_summary.py  yaml_parser.py
examples/: fraud_anomaly.yml  house_regression.yml  titanic.yml
gui/: main.py
handlers/: base.py
installer/: ml_orchestrator_demo.iss
logs/: runs.csv
packaging/: conda-env.yml
pyinstaller_hooks/: hook-PySide6.py  hook-shiboken6.py
scripts/: add_encoding_control.py  apply_recommender_to_examples.py  build_demo.ps1  build_installer.ps1  build_release.ps1  check_packaging_env.py  compile_all.py  ensure_test_data.py  find_compiled_extensions.py  list_extensions.py  update_phases_encoding.py  update_preprocess_encoding.py  verify_release_artifact.ps1  wire_encoding_yaml.py
tests/: test_binary_mvp_flow.py  test_data_quality.py  test_data_quality_recommender.py  test_executor_classification_logreg.py  test_executor_error_handling.py  test_executor_fraud.py  test_executor_regression.py  test_executor_titanic.py  test_gui_preprocess_hint.py  test_gui_preprocess_toggle_yaml.py  test_gui_smoke.py  test_hyperparameter_tuner.py  (+10 more)
(+21 files in other folders)
