[project]
name = "ml-orchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "Shreesh-Nair",email = "shreeshrnair@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy (<2)",
    "mlflow (<3.0)",
    "pandas (<2.2)",
    "pyyaml (<7.0)",
    "scikit-learn (==1.5.2)",
    "xgboost (>=2.0,<3.0)",
    "opencv-python-headless (<4.11)",
    "PySide6 (>=6.6,<6.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "benchmark: mark test as a performance benchmark",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

